--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="main.scss">
+    <link rel="stylesheet" href="static/scss/_main.scss">
     <title>Title</title>
 </head>
+
 <body>
     <div id="root"></div>
 </body>
+
 </html>
