--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="main.scss">
+    <link rel="stylesheet" href="./static/main.scss">
     <title>Title</title>
 </head>
 <body>
-    <div id="root"></div>
-</body>
+    <div id="app"></div>
+    <script src = './src/app.ts' type="module"></script>
+    <div id="header_container"></div>
+    <div id="page_container" class=" " >
+        <section> content </section>
+    </div>
+    <div id="footer_container"></div></body>
 </html>
