--- a/src/index.html
+++ b/src/index.html
@@ -1,31 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-<<<<<<< HEAD
-    <link rel="stylesheet" href="./static/main.scss">
-=======
-    <link rel="stylesheet" href="static/scss/_main.scss">
->>>>>>> 3e4e5795642facfba9d2c01d3438d9d26d7bca85
-    <title>Title</title>
-</head>
-
-<body>
-<<<<<<< HEAD
-    <div id="app"></div>
-    <script src = './src/app.ts' type="module"></script>
-    <div id="header_container"></div>
-    <div id="page_container" class=" " >
-        <section> content </section>
-    </div>
-    <div id="footer_container"></div></body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="static/scss/_main.scss">
+        <title>Title</title>
+    </head>
+    <body>
+    <!--    <script src = './src/app.ts' type="module"></script>-->
+        <script type="module" src="../dist/runtime-main.bundle.js"></script>
+        <div id="app"></div>
+    </body>
 </html>
-=======
-    <div id="root"></div>
-    <script src="../dist/runtime-main.bundle.js"></script>
-</body>
-
-</html>
->>>>>>> 3e4e5795642facfba9d2c01d3438d9d26d7bca85
