--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,8 +6,7 @@
         <title>Title</title>
     </head>
     <body>
-    <!--    <script src = './src/app.ts' type="module"></script>-->
-        <script type="module" src="../dist/runtime-main.bundle.js"></script>
         <div id="app"></div>
+        <!-- <script src="../dist/runtime-main.bundle.js"></script> -->
     </body>
 </html>
