--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
         <link rel='stylesheet' src='./static/scss/_main.scss'/>
     </head>
     <body>
-        <div class='app'></div>
+        <div id='app'></div>
+        <page-header></page-header>
+        <script src="../src/components/core/layout/PageHeader.ts"></script>
     </body>
 </html>
